tests/instantiating/bus_width_not_power_of_two/stderr.golden
error: invalid bus width 13, valid bus width must be greater than 7 and must be a power of 2
bus.fbd +2:11
   |
 2 |   width = 13
   |           ^^
